Added documentation to attribute class, and added != operator to attribute class

--- a/OccludedLibrary/docs/latex/annotated.tex
+++ b/OccludedLibrary/docs/latex/annotated.tex
@@ -1,6 +1,6 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute}{occluded\+::buffers\+::attributes\+::attribute} }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute}{occluded\+::buffers\+::attributes\+::attribute} \\*Stores metadata about a value or a set of values }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer}{occluded\+::buffers\+::attribute\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer__factory}{occluded\+::buffers\+::attribute\+\_\+buffer\+\_\+factory} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer__factory}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{occluded\+::buffers\+::attributes\+::attribute\+\_\+map} }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}}{}
