Added documentation for the attribute_map class

--- a/OccludedLibrary/docs/latex/dir_ab2ce609b7a18fd0d99181366bfd6a18.tex
+++ b/OccludedLibrary/docs/latex/dir_ab2ce609b7a18fd0d99181366bfd6a18.tex
@@ -15,4 +15,8 @@ file {\bfseries shader\+\_\+attribute\+\_\+map.\+h}
 file {\bfseries shader\+\_\+program.\+cpp}
 \item 
 file {\bfseries shader\+\_\+program.\+h}
+\item 
+file {\bfseries shader\+\_\+uniform\+\_\+store.\+cpp}
+\item 
+file {\bfseries shader\+\_\+uniform\+\_\+store.\+h}
 \end{DoxyCompactItemize}
