--- a/OccludedLibrary/docs/latex/annotated.tex
+++ b/OccludedLibrary/docs/latex/annotated.tex
@@ -3,7 +3,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute}{occluded\+::buffers\+::attributes\+::attribute} \\*Stores metadata about a value or a set of values }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer}{occluded\+::buffers\+::attribute\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer__factory}{occluded\+::buffers\+::attribute\+\_\+buffer\+\_\+factory} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer__factory}}{}
-\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{occluded\+::buffers\+::attributes\+::attribute\+\_\+map} }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{occluded\+::buffers\+::attributes\+::attribute\+\_\+map} \\*Defines an organization of attributes }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1utilities_1_1files_1_1file__reader}{occluded\+::utilities\+::files\+::file\+\_\+reader} }{\pageref{classoccluded_1_1utilities_1_1files_1_1file__reader}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}{occluded\+::opengl\+::retained\+::gl\+\_\+attribute\+\_\+buffer} \\*A wrapper class for an Open\+G\+L buffer }{\pageref{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1interleaved__attr__buffer}{occluded\+::buffers\+::interleaved\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1interleaved__attr__buffer}}{}
@@ -11,4 +11,5 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}{occluded\+::opengl\+::retained\+::shaders\+::shader} \\*A wrapper class for an Open\+G\+L shader }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+attribute\+\_\+map} \\*Handles the mapping of attributes in an attribute map to those in a shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program} \\*A wrapper class for an Open\+G\+L G\+L\+S\+L shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__uniform__store}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+uniform\+\_\+store} \\*Stores uniform values for a particular shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__uniform__store}}{}
 \end{DoxyCompactList}
