--- a/OccludedLibrary/docs/latex/hierarchy.tex
+++ b/OccludedLibrary/docs/latex/hierarchy.tex
@@ -13,4 +13,5 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}}{}
 \item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader\+\_\+attribute\+\_\+map}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}}{}
 \item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader\+\_\+program}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}}{}
+\item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader\+\_\+uniform\+\_\+store}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__uniform__store}}{}
 \end{DoxyCompactList}
