--- a/OccludedLibrary/docs/latex/annotated.tex
+++ b/OccludedLibrary/docs/latex/annotated.tex
@@ -1,13 +1,13 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute}{occluded\+::buffers\+::attributes\+::attribute} \\*Stores metadata about a value or a set of values }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute}}{}
-\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer}{occluded\+::buffers\+::attribute\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer}{occluded\+::buffers\+::attribute\+\_\+buffer} \\*Provides contiguous storage for values associated with attributes }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer__factory}{occluded\+::buffers\+::attribute\+\_\+buffer\+\_\+factory} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer__factory}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{occluded\+::buffers\+::attributes\+::attribute\+\_\+map} \\*Defines an organization of attributes }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1utilities_1_1files_1_1file__reader}{occluded\+::utilities\+::files\+::file\+\_\+reader} }{\pageref{classoccluded_1_1utilities_1_1files_1_1file__reader}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}{occluded\+::opengl\+::retained\+::gl\+\_\+attribute\+\_\+buffer} \\*A wrapper class for an Open\+G\+L buffer }{\pageref{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}}{}
-\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1interleaved__attr__buffer}{occluded\+::buffers\+::interleaved\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1interleaved__attr__buffer}}{}
-\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1segregated__attr__buffer}{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1segregated__attr__buffer}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1interleaved__attr__buffer}{occluded\+::buffers\+::interleaved\+\_\+attr\+\_\+buffer} \\*An attribute buffer subclass with interleaved data }{\pageref{classoccluded_1_1buffers_1_1interleaved__attr__buffer}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1segregated__attr__buffer}{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer} \\*An attribute buffer subclass with segregated data }{\pageref{classoccluded_1_1buffers_1_1segregated__attr__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}{occluded\+::opengl\+::retained\+::shaders\+::shader} \\*A wrapper class for an Open\+G\+L shader }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+attribute\+\_\+map} \\*Handles the mapping of attributes in an attribute map to those in a shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program} \\*A wrapper class for an Open\+G\+L G\+L\+S\+L shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}}{}
