--- a/OccludedLibrary/docs/latex/classoccluded_1_1buffers_1_1segregated__attr__buffer.tex
+++ b/OccludedLibrary/docs/latex/classoccluded_1_1buffers_1_1segregated__attr__buffer.tex
@@ -1,6 +1,15 @@
 \hypertarget{classoccluded_1_1buffers_1_1segregated__attr__buffer}{\section{occluded\+:\+:buffers\+:\+:segregated\+\_\+attr\+\_\+buffer Class Reference}
 \label{classoccluded_1_1buffers_1_1segregated__attr__buffer}\index{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer@{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer}}
 }
+
+
+An attribute buffer subclass with segregated data.  
+
+
+
+
+{\ttfamily \#include $<$segregated\+\_\+attr\+\_\+buffer.\+h$>$}
+
 Inheritance diagram for occluded\+:\+:buffers\+:\+:segregated\+\_\+attr\+\_\+buffer\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -13,10 +22,37 @@ Inheritance diagram for occluded\+:\+:buffers\+:\+:segregated\+\_\+attr\+\_\+buf
 \hypertarget{classoccluded_1_1buffers_1_1segregated__attr__buffer_ab822a9e4ccf2be069418224fc2663622}{{\bfseries segregated\+\_\+attr\+\_\+buffer} (const \hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{attributes\+::attribute\+\_\+map} \&map)}\label{classoccluded_1_1buffers_1_1segregated__attr__buffer_ab822a9e4ccf2be069418224fc2663622}
 
 \item 
-\hypertarget{classoccluded_1_1buffers_1_1segregated__attr__buffer_aeb8e81bdc65a9c7b002632c4ebb44ef1}{void {\bfseries insert\+\_\+values} (const std\+::vector$<$ char $>$ \&values)}\label{classoccluded_1_1buffers_1_1segregated__attr__buffer_aeb8e81bdc65a9c7b002632c4ebb44ef1}
-
-\end{DoxyCompactItemize}
+void \hyperlink{classoccluded_1_1buffers_1_1segregated__attr__buffer_a437ef88504021dc75d45dff010986128}{insert\+\_\+values} (const std\+::vector$<$ char $>$ \&values)
+\begin{DoxyCompactList}\small\item\em Inserts values into the attribute buffer. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
+
+
+\subsection{Detailed Description}
+An attribute buffer subclass with segregated data. 
+
+An attribute buffer that stores values in segregated sections. The first value of the first attribute will be stored, then the second value of the first attribute is stored and so on. 
+
+\subsection{Member Function Documentation}
+\hypertarget{classoccluded_1_1buffers_1_1segregated__attr__buffer_a437ef88504021dc75d45dff010986128}{\index{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer@{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer}!insert\+\_\+values@{insert\+\_\+values}}
+\index{insert\+\_\+values@{insert\+\_\+values}!occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer@{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer}}
+\subsubsection[{insert\+\_\+values}]{\setlength{\rightskip}{0pt plus 5cm}occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer\+::insert\+\_\+values (
+\begin{DoxyParamCaption}
+\item[{const std\+::vector$<$ char $>$ \&}]{values}
+\end{DoxyParamCaption}
+)\hspace{0.3cm}{\ttfamily [virtual]}}}\label{classoccluded_1_1buffers_1_1segregated__attr__buffer_a437ef88504021dc75d45dff010986128}
+
+
+Inserts values into the attribute buffer. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em values} & A reference to a vector of characters representing the values to be inserted.\\
+\hline
+\end{DoxyParams}
+Inserts a value into the attribute buffer. The values in the vector parameter will be split up and each value will be placed in the correct section of the buffer. 
+
+Implements \hyperlink{classoccluded_1_1buffers_1_1attribute__buffer_a323a2283330b0bcf4909e8d93bfc594a}{occluded\+::buffers\+::attribute\+\_\+buffer}.
+
 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
